remove sameAs: NaN which was a potential source of error

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,8 +285,10 @@
     "        dupepropsgraph = []\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
+    "                x = remove_NaN_fields(x)\n",
     "                cleanpropsgraph.append(x)\n",
     "            elif x[\"@id\"] in duplicates:\n",
+    "                x = remove_NaN_fields(x)\n",
     "                dupepropsgraph.append(x)\n",
     "        #dupepropsgraph[0][\"dummyProp\"]={\"@id\":\"dummyValue\"} #### creates dummy property for testing only\n",
     "        dupepropsdf = pd.DataFrame(dupepropsgraph)\n",
@@ -304,6 +306,7 @@
     "    else:\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
+    "                x = remove_NaN_fields(x)\n",
     "                cleanpropsgraph.append(x)\n",
     "    return(cleanpropsgraph)   "
    ]
@@ -332,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,13 +343,35 @@
     "    spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
     "    bioschemas_json = merge_specs(spec_list)\n",
     "    bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "    jsonstring = json.dumps(bioschemas_json)\n",
+    "    cleanstring = remove_NaN_fields(jsonstring)\n",
     "    with open(bioschemasfile,'w') as outfile:\n",
-    "        outfile.write(json.dumps(bioschemas_json))"
+    "        outfile.write(cleanstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_NaN_fields(propdef):\n",
+    "    if isinstance(propdef,dict):\n",
+    "        cleandict = {}\n",
+    "        for k, v in propdef.items():\n",
+    "            if k != \"schema:sameAs\":\n",
+    "                cleandict[k]=v\n",
+    "            elif k == \"schema:sameAs\": \n",
+    "                if isinstance(v,type(None))==False:\n",
+    "                    cleandict[k]=v\n",
+    "    if isinstance(propdef,str):\n",
+    "        cleandict = propdef.replace('\"schema:sameAs\": NaN,','')\n",
+    "    return(cleandict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
