--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -96,6 +96,7 @@
     "    bioschemasUrl = \"https://discovery.biothings.io/view/bioschemas/\"\n",
     "    contextInfo[\"bioschemas\"]=bioschemasUrl\n",
     "    contextInfo[\"dct\"] = \"http://purl.org/dc/terms/\"\n",
+    "    contextInfo[\"owl\"] = \"http://www.w3.org/2002/07/owl#\"\n",
     "    return(contextInfo)\n",
     "\n",
     "def update_subclass(spec_list,eachurl,cleantext):\n",
