fix function for removing sameAs NaNs

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -336,7 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_NaN_fields(propdef):\n",
+    "    if isinstance(propdef,dict):\n",
+    "        cleandict = {}\n",
+    "        for k, v in propdef.items():\n",
+    "            if k != \"schema:sameAs\":\n",
+    "                cleandict[k]=v\n",
+    "            elif k == \"schema:sameAs\": \n",
+    "                if isinstance(v,type(None))==False:\n",
+    "                    cleandict[k]=v\n",
+    "    if isinstance(propdef,str):\n",
+    "        cleandict = propdef.replace('\"schema:sameAs\": NaN,','')\n",
+    "        cleandict = propdef.replace('\"schema:sameAs\": NaN','')\n",
+    "    return(cleandict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,27 +373,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_NaN_fields(propdef):\n",
-    "    if isinstance(propdef,dict):\n",
-    "        cleandict = {}\n",
-    "        for k, v in propdef.items():\n",
-    "            if k != \"schema:sameAs\":\n",
-    "                cleandict[k]=v\n",
-    "            elif k == \"schema:sameAs\": \n",
-    "                if isinstance(v,type(None))==False:\n",
-    "                    cleandict[k]=v\n",
-    "    if isinstance(propdef,str):\n",
-    "        cleandict = propdef.replace('\"schema:sameAs\": NaN,','')\n",
-    "    return(cleandict)"
+    "script_path = \"\"\n",
+    "spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
+    "bioschemas_json = merge_specs(spec_list)\n",
+    "bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "jsonstring = json.dumps(bioschemas_json)\n",
+    "cleanstring = remove_NaN_fields(jsonstring)\n",
+    "with open(bioschemasfile,'w') as outfile:\n",
+    "    outfile.write(cleanstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
