split profile and types

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -30,6 +30,8 @@
     "7. Automatically include `dct:conformsTo` to all classes definied by the schema\n",
     "8. Automatically include `schema:schemaVersion` to all classes defined by the schema\n",
     "\n",
+    "Note - As of 2022.02.17 - the script will split out types and profiles which will be saved to different json files and ingested into the DDE under different namespaces.\n",
+    "\n",
     "  "
    ]
   },
@@ -63,6 +65,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sort_speclist(spec_list):\n",
+    "    spec_type = spec_list.loc[spec_list['type']=='Type'].copy()\n",
+    "    spec_profs = spec_list.loc[spec_list['type']=='Profile'].copy()\n",
+    "    return(spec_type,spec_profs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_raw_url(url):\n",
     "    if 'raw' not in url:\n",
     "        rawrawurl = url.replace('github.com','raw.githubusercontent.com')\n",
@@ -84,17 +98,24 @@
     "def rename_namespace(spec_list,eachurl,rawtext):\n",
     "    tmpinfo = spec_list.loc[spec_list['url']==eachurl]\n",
     "    tmpnamespace = tmpinfo.iloc[0]['namespace']\n",
-    "    if tmpnamespace!='bioschemas':\n",
-    "        tmptext = '\"@id\": \"'+tmpnamespace+':'\n",
-    "        cleantext = rawtext.replace(tmptext,'\"@id\": \"bioschemas:')\n",
-    "    else:\n",
-    "        cleantext = rawtext\n",
+    "    if tmpinfo.iloc[0]['type']=='Profile':\n",
+    "        if tmpnamespace!='bioschemas':\n",
+    "            tmptext = '\"@id\": \"'+tmpnamespace+':'\n",
+    "            cleantext = rawtext.replace(tmptext,'\"@id\": \"bioschemas:')\n",
+    "        else:\n",
+    "            cleantext = rawtext\n",
+    "    elif tmpinfo.iloc[0]['type']=='Type':\n",
+    "        if tmpnamespace!='bioschemastypes':\n",
+    "            tmptext = '\"@id\": \"'+tmpnamespace+':'\n",
+    "            cleantext = rawtext.replace(tmptext,'\"@id\": \"bioschemastypes:')\n",
+    "        else:\n",
+    "            cleantext = rawtext        \n",
     "    return(cleantext)\n",
     "\n",
     "def check_context_url(spec_json):\n",
     "    contextInfo = spec_json['@context']\n",
-    "    bioschemasUrl = \"https://discovery.biothings.io/view/bioschemas/\"\n",
-    "    contextInfo[\"bioschemas\"]=bioschemasUrl\n",
+    "    contextInfo[\"bioschemas\"]= \"http://discovery.biothings.io/view/bioschemas/\"\n",
+    "    contextInfo[\"bioschemastypes\"] = \"http://discovery.biothings.io/view/bioschemastypes/\"\n",
     "    contextInfo[\"dct\"] = \"http://purl.org/dc/terms/\"\n",
     "    contextInfo[\"owl\"] = \"http://www.w3.org/2002/07/owl#\"\n",
     "    return(contextInfo)\n",
@@ -107,6 +128,8 @@
     "    truesubclass = {\"@id\": tmpsubclass}\n",
     "    for x in spec_json['@graph']:\n",
     "        if x['@id']==\"bioschemas:\"+classname:\n",
+    "            x['rdfs:subClassOf']=truesubclass\n",
+    "        if x['@id']==\"bioschemastypes:\"+classname:\n",
     "            x['rdfs:subClassOf']=truesubclass\n",
     "    return(spec_json)"
    ]
@@ -363,11 +386,18 @@
    "source": [
     "def update_specs(script_path):\n",
     "    spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
-    "    bioschemas_json = remove_NaN_fields(merge_specs(spec_list))\n",
+    "    spec_type,spec_profs = sort_speclist(spec_list)\n",
+    "    bioschemas_json = remove_NaN_fields(merge_specs(spec_profs))\n",
     "    bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
     "    jsonstring = json.dumps(bioschemas_json)\n",
     "    cleanstring = remove_NaN_fields(jsonstring)\n",
     "    with open(bioschemasfile,'w') as outfile:\n",
+    "        outfile.write(cleanstring)\n",
+    "    bioschemastype_json = remove_NaN_fields(merge_specs(spec_type))\n",
+    "    bioschemastypefile = os.path.join(script_path,'bioschemastypes.json')\n",
+    "    jsonstring = json.dumps(bioschemas_json)\n",
+    "    cleanstring = remove_NaN_fields(jsonstring)\n",
+    "    with open(bioschemastypefile,'w') as outfile:\n",
     "        outfile.write(cleanstring)"
    ]
   },
