fix issues with splitting the lists

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,12 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_schemaVersion(spec_list,x):\n",
-    "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
+    "    if spec_list.iloc[0]['type']=='Type':\n",
+    "        spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemastypes:\",\"\")]\n",
+    "    if spec_list.iloc[0]['type']=='Profile':\n",
+    "        spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
     "    spec_url = spec_info.iloc[0]['url']\n",
     "    baseurl = \"https://bioschemas.org\"\n",
     "    versionurl = baseurl+'/'+spec_info.iloc[0]['type'].lower()+'s/'+spec_info.iloc[0]['name']+'/'+spec_info.iloc[0]['version']\n",
@@ -209,15 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_specification_type(spec_list,x):\n",
-    "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
-    "    if spec_info.iloc[0]['type']=='Type':\n",
+    "    if spec_list.iloc[0]['type']=='Type':\n",
+    "        spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemastypes:\",\"\")]\n",
     "        baseurl = 'https://bioschemas.org/types#nav-'\n",
-    "    elif spec_info.iloc[0]['type']=='Profile':\n",
+    "    elif spec_list.iloc[0]['type']=='Profile':\n",
+    "        spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
     "        baseurl = 'https://bioschemas.org/profiles#nav-'\n",
     "    if 'deprecated' in spec_info.iloc[0]['version'].lower():\n",
     "        typeurl = baseurl+'deprecated'\n",
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,13 +363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_NaN_fields(propdef):\n",
+    "    cleandict = {}\n",
     "    if isinstance(propdef,dict):\n",
-    "        cleandict = {}\n",
     "        for k, v in propdef.items():\n",
     "            if k != \"schema:sameAs\":\n",
     "                cleandict[k]=v\n",
@@ -380,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,10 +399,10 @@
     "        outfile.write(cleanstring)\n",
     "    bioschemastype_json = remove_NaN_fields(merge_specs(spec_type))\n",
     "    bioschemastypefile = os.path.join(script_path,'bioschemastypes.json')\n",
-    "    jsonstring = json.dumps(bioschemas_json)\n",
-    "    cleanstring = remove_NaN_fields(jsonstring)\n",
-    "    with open(bioschemastypefile,'w') as outfile:\n",
-    "        outfile.write(cleanstring)"
+    "    typejsonstring = json.dumps(bioschemastype_json)\n",
+    "    typecleanstring = remove_NaN_fields(typejsonstring)\n",
+    "    with open(bioschemastypefile,'w') as typeoutfile:\n",
+    "        typeoutfile.write(typecleanstring)"
    ]
   },
   {
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,22 +445,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 2 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "script_path = ''\n",
+    "spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
+    "spec_type,spec_profs = sort_speclist(spec_list)\n",
+    "\n",
+    "bioschemas_json = remove_NaN_fields(merge_specs(spec_profs))\n",
+    "#print(bioschemas_json)\n",
+    "bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "jsonstring = json.dumps(tmp2)\n",
+    "cleanstring = remove_NaN_fields(jsonstring)\n",
+    "with open(bioschemasfile,'w') as outfile:\n",
+    "    outfile.write(cleanstring)\n",
+    "print(len(spec_list),len(spec_type),len(spec_profs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    namespace           name                subclassOf  type      version  \\\n",
+      "0  bioschemas  BioChemEntity  bioschemas:BioChemEntity  Type  0.7-RELEASE   \n",
+      "1  bioschemas      BioSample  bioschemas:BioChemEntity  Type  0.1-RELEASE   \n",
+      "\n",
+      "                                                 url  \n",
+      "0  https://github.com/BioSchemas/specifications/b...  \n",
+      "1  https://github.com/BioSchemas/specifications/b...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(spec_type)\n",
+    "\n",
+    "bioschemastype_json = remove_NaN_fields(merge_specs(spec_type))\n",
+    "bioschemastypefile = os.path.join(script_path,'bioschemastypes.json')\n",
+    "typejsonstring = json.dumps(bioschemastype_json)\n",
+    "typecleanstring = remove_NaN_fields(typejsonstring)\n",
+    "with open(bioschemastypefile,'w') as typeoutfile:\n",
+    "    typeoutfile.write(typecleanstring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bioschemastypes:BioChemEntity', 'bioschemastypes:BioSample']\n",
+      "24\n",
+      "23\n",
+      "2 21\n",
+      "{'@id': 'dct:conformsTo', '@type': 'rdf:Property', 'rdfs:comment': 'Used to state the Bioschemas profile that the markup relates to. The versioned URL of the profile must be used. Note that we use a CURIE in the table here but the full URL for Dublin Core terms must be used in the markup (http://purl.org/dc/terms/conformsTo), see example.', 'rdfs:label': 'conformsTo', 'schema:domainIncludes': [{'@id': 'bioschemastypes:BioChemEntity'}, {'@id': 'bioschemastypes:BioSample'}], 'schema:rangeIncludes': [{'@id': 'schema:CreativeWork'}, {'@id': 'schema:Text'}, {'@id': 'schema:Thing'}]}\n"
+     ]
+    }
+   ],
    "source": [
     "## test\n",
-    "spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
+    "#spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
     "bioschemas_json = {}\n",
     "graphlist = []\n",
     "classlist = []\n",
     "propertylist = []\n",
-    "for eachurl in spec_list['url']:\n",
+    "for eachurl in spec_type['url']:\n",
     "    rawurl = get_raw_url(eachurl)\n",
     "    r = requests.get(rawurl)\n",
     "    if r.status_code == 200:\n",
-    "        cleantext = rename_namespace(spec_list,eachurl,r.text)\n",
-    "        spec_json = update_subclass(spec_list,eachurl,cleantext)\n",
+    "        cleantext = rename_namespace(spec_type,eachurl,r.text)\n",
+    "        spec_json = update_subclass(spec_type,eachurl,cleantext)\n",
     "        bioschemas_json['@context'] = check_context_url(spec_json)\n",
     "        for x in spec_json['@graph']:\n",
     "            graphlist.append(x)\n",
@@ -464,8 +538,8 @@
     "                classlist.append(x[\"@id\"])\n",
     "            if x[\"@type\"]==\"rdf:Property\":\n",
     "                propertylist.append(x[\"@id\"])\n",
-    "\n",
-    "cleanclassgraph = clean_duplicate_classes(graphlist,classlist)\n",
+    "print(classlist)\n",
+    "cleanclassgraph = clean_duplicate_classes(spec_type,graphlist,classlist)\n",
     "cleanpropsgraph = clean_duplicate_properties(graphlist, propertylist)\n",
     "cleangraph = []\n",
     "for z in cleanclassgraph:\n",
@@ -478,6 +552,85 @@
     "print(len(cleanclassgraph)+len(cleanpropsgraph))\n",
     "print(len(cleanclassgraph),len(cleanpropsgraph))\n",
     "print(cleangraph[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
+    "nondupes = [x for x in classlist if x not in duplicates]\n",
+    "cleanclassgraph = []\n",
+    "if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
+    "    for x in graphlist:\n",
+    "        if x[\"@id\"] in nondupes:\n",
+    "            x = add_specification_type(spec_type,x)\n",
+    "            x = add_schemaVersion(spec_type,x)\n",
+    "            if \"$validation\" in x.keys():\n",
+    "                x = add_conformsTo(spec_type,x)\n",
+    "            cleanclassgraph.append(x)\n",
+    "        for eachclass in duplicates:\n",
+    "            if x[\"@id\"]==eachclass:\n",
+    "                x = add_specification_type(spec_type,x)\n",
+    "                x = add_schemaVersion(spec_type,x)\n",
+    "                if \"$validation\" in x.keys():\n",
+    "                    x = add_conformsTo(spec_type,x)\n",
+    "                cleanclassgraph.append(x)\n",
+    "\n",
+    "else:  ## There are not duplicate classes to clean up\n",
+    "    for x in graphlist:\n",
+    "        if x[\"@id\"] in nondupes:\n",
+    "            x = add_specification_type(spec_type,x)\n",
+    "            x = add_schemaVersion(spec_type,x)     \n",
+    "            if \"$validation\" in x.keys():\n",
+    "                x = add_conformsTo(spec_type,x)\n",
+    "            cleanclassgraph.append(x) \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bioschemastypes:samplingAge\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nspec_info = spec_type.loc[spec_type[\\'name\\']==x[\\'@id\\'].replace(\"bioschemas:\",\"\")]\\nspec_info = spec_type.loc[spec_type[\\'name\\']==x[\\'@id\\'].replace(\"bioschemastypes:\",\"\")]\\nprint(spec_type)\\nif spec_info.iloc[0][\\'type\\']==\\'Type\\':\\n    baseurl = \\'https://bioschemas.org/types#nav-\\'\\nelif spec_info.iloc[0][\\'type\\']==\\'Profile\\':\\n    baseurl = \\'https://bioschemas.org/profiles#nav-\\'\\nif \\'deprecated\\' in spec_info.iloc[0][\\'version\\'].lower():\\n    typeurl = baseurl+\\'deprecated\\'\\nelif \\'release\\' in spec_info.iloc[0][\\'version\\'].lower():\\n    typeurl = baseurl+\\'release\\'\\nelif \\'draft\\' in spec_info.iloc[0][\\'version\\'].lower():\\n    typeurl = baseurl+\\'draft\\'\\nx[\\'additional_type\\'] = typeurl\\n'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(x['@id'])\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "print(spec_type)\n",
+    "if spec_info.iloc[0]['type']=='Type':\n",
+    "    baseurl = 'https://bioschemas.org/types#nav-'\n",
+    "elif spec_info.iloc[0]['type']=='Profile':\n",
+    "    baseurl = 'https://bioschemas.org/profiles#nav-'\n",
+    "if 'deprecated' in spec_info.iloc[0]['version'].lower():\n",
+    "    typeurl = baseurl+'deprecated'\n",
+    "elif 'release' in spec_info.iloc[0]['version'].lower():\n",
+    "    typeurl = baseurl+'release'\n",
+    "elif 'draft' in spec_info.iloc[0]['version'].lower():\n",
+    "    typeurl = baseurl+'draft'\n",
+    "x['additional_type'] = typeurl\n",
+    "\"\"\""
    ]
   },
   {
