changed http to https as the link is actually https, even if the DDE generated http links by default

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -114,8 +114,8 @@
     "\n",
     "def check_context_url(spec_json):\n",
     "    contextInfo = spec_json['@context']\n",
-    "    contextInfo[\"bioschemas\"]= \"http://discovery.biothings.io/view/bioschemas/\"\n",
-    "    contextInfo[\"bioschemastypes\"] = \"http://discovery.biothings.io/view/bioschemastypes/\"\n",
+    "    contextInfo[\"bioschemas\"]= \"https://discovery.biothings.io/view/bioschemas/\"\n",
+    "    contextInfo[\"bioschemastypes\"] = \"https://discovery.biothings.io/view/bioschemastypes/\"\n",
     "    contextInfo[\"dct\"] = \"http://purl.org/dc/terms/\"\n",
     "    contextInfo[\"owl\"] = \"http://www.w3.org/2002/07/owl#\"\n",
     "    return(contextInfo)\n",
