--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,13 +217,14 @@
     "    graphlist = []\n",
     "    classlist = []\n",
     "    propertylist = []\n",
+    "    bioschemas_json['@context'] = {}\n",
     "    for eachurl in spec_list['url']:\n",
     "        rawurl = get_raw_url(eachurl)\n",
     "        r = requests.get(rawurl)\n",
     "        if r.status_code == 200:\n",
     "            cleantext = rename_namespace(spec_list,eachurl,r.text)\n",
     "            spec_json = json.loads(cleantext)\n",
-    "            bioschemas_json['@context'] = check_context_url(spec_json)\n",
+    "            bioschemas_json['@context'].update(check_context_url(spec_json))\n",
     "            for x in spec_json['@graph']:\n",
     "                graphlist.append(x)\n",
     "                if x[\"@type\"]==\"rdfs:Class\":\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,21 +463,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'check_for_nans' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2896/3480935651.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mspec_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'specifications_list.txt'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\t'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcheck_for_nans\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspec_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#check_json_formatting(spec_list)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'check_for_nans' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
     "check_for_nans(spec_list)\n",
@@ -495,17 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from biothings_schema import Schema\n",
     "\n",
     "script_path = ''\n",
-    "#url = \"https://raw.githubusercontent.com/gtsueng/bioschemas-dde/main/bioschemas.json\"\n",
-    "bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
-    "with open(bioschemasfile,'r') as infile:\n",
-    "    url = json.load(infile)\n",
+    "url = \"https://raw.githubusercontent.com/gtsueng/bioschemas-dde/main/bioschemas.json\"\n",
+    "#bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "#with open(bioschemasfile,'r') as infile:\n",
+    "#    url = json.load(infile)\n",
     "\n",
     "sc = Schema(url, base_schema=[\"schema.org\"])"
    ]
