--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -67,6 +67,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def check_for_updates(script_path,updateall=False):\n",
     "    checktime = datetime.now()\n",
@@ -554,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,59 +582,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'speclist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16884/2485106041.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#### For additional Testing if \"run_update\" fails\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mspec_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspeclist\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mduplicates\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclasslist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mclasslist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mnondupes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mclasslist\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mduplicates\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'speclist' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "updateall=True\n",
-    "if updateall == True:\n",
-    "    updatedlist = check_for_updates(script_path,True)\n",
-    "else:\n",
-    "    updatedlist = check_for_updates(script_path,False)\n",
-    "if updatedlist == False:\n",
-    "    print(\"no updates pushed\")\n",
-    "else:\n",
-    "    for eachfile in updatedlist:\n",
-    "        print(\"\")\n",
-    "        print(eachfile)\n",
-    "        speclist = read_csv(eachfile,delimiter='\\t',header=0)\n",
-    "        print(speclist)\n",
-    "        tmpinfo = merge_specs(speclist)\n",
-    "        bioschemas_json = remove_NaN_fields(tmpinfo)\n",
-    "        jsonstring = json.dumps(bioschemas_json)\n",
-    "        cleanstring = remove_NaN_fields(jsonstring)\n",
-    "        cleandict = json.loads(cleanstring)\n",
-    "        prettystring = json.dumps(cleandict, indent=2)\n",
-    "        #### Check specification list file name to determine where to save\n",
-    "        if \"deprecated\" in eachfile:\n",
-    "            print(\"deprecated: \", eachfile)\n",
-    "            ####treat as deprecated\n",
-    "            bioschemasfile = os.path.join(script_path,'bioschemasdeprecated.json')\n",
-    "        elif ((\"type\" in eachfile) and (\"draft\" not in eachfile)):\n",
-    "            print(\"type, release: \", eachfile)\n",
-    "            ####treat as type\n",
-    "            bioschemasfile = os.path.join(script_path,'bioschemastypes.json')\n",
-    "        elif ((\"type\" in eachfile) and (\"draft\" in eachfile)):\n",
-    "            print(\"type, draft: \", eachfile)\n",
-    "            #### draft type treat as type \n",
-    "            bioschemasfile = os.path.join(script_path,'bioschemastypesdrafts.json')\n",
-    "        elif ((\"profile\" in eachfile) and (\"draft\" not in eachfile)):\n",
-    "            print(\"profile, release: \", eachfile)\n",
-    "            bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
-    "        elif ((\"profile\" in eachfile) and (\"draft\" in eachfile)):\n",
-    "            ####treat as draft profile\n",
-    "            print(\"profile, draft: \", eachfile)\n",
-    "            bioschemasfile = os.path.join(script_path,'bioschemasdrafts.json')\n",
-    "        with open(bioschemasfile,'w') as outfile:\n",
-    "            outfile.write(prettystring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#### For additional Testing if \"run_update\" fails\n",
+    "\n",
     "spec_list = speclist\n",
     "duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
     "nondupes = [x for x in classlist if x not in duplicates]\n",
@@ -694,10 +666,170 @@
     "            if \"$validation\" in x.keys():\n",
     "                x = add_conformsTo(spec_list,x)\n",
     "            cleanclassgraph.append(x) \n",
-    "            \n",
-    "            \n",
-    "#### Note this issue is due to the namespaces in bioschemastypes json files currently = to bioschemas\n",
-    "#### As it has not yet been properly split. The namespaces need to be cleaned up properly for it to work "
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "profile_list.txt\n",
+      "     namespace                   name                  subclassOf     type  \\\n",
+      "0   bioschemas      ChemicalSubstance    schema:ChemicalSubstance  Profile   \n",
+      "1   bioschemas                   Gene                 schema:Gene  Profile   \n",
+      "2   bioschemas                  Taxon                schema:Taxon  Profile   \n",
+      "3   bioschemas        MolecularEntity      schema:MolecularEntity  Profile   \n",
+      "4   bioschemas                Protein              schema:Protein  Profile   \n",
+      "5   bioschemas        FormalParameter           schema:Intangible  Profile   \n",
+      "6   bioschemas      ComputationalTool  schema:SoftwareApplication  Profile   \n",
+      "7   bioschemas  ComputationalWorkflow   schema:SoftwareSourceCode  Profile   \n",
+      "8   bioschemas            DataCatalog          schema:DataCatalog  Profile   \n",
+      "9   bioschemas                Dataset              schema:Dataset  Profile   \n",
+      "10  bioschemas                 Sample                schema:Thing  Profile   \n",
+      "\n",
+      "         version                                                url  \n",
+      "0    0.4-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "1    1.0-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "2    0.6-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "3    0.5-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "4   0.11-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "5    1.0-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "6    1.0-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "7    1.0-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "8    0.3-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "9    0.3-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "10   0.2-RELEASE  https://github.com/BioSchemas/specifications/b...  \n",
+      "profile, release:  profile_list.txt\n",
+      "\n",
+      "draft_profile_list.txt\n",
+      "     namespace                    name                 subclassOf     type  \\\n",
+      "0   bioschemas                  Course              schema:Course  Profile   \n",
+      "1   bioschemas          CourseInstance      schema:CourseInstance  Profile   \n",
+      "2   bioschemas                   Event               schema:Event  Profile   \n",
+      "3   bioschemas                 Journal  schema:CreativeWorkSeries  Profile   \n",
+      "4   bioschemas             LabProtocol               schema:HowTo  Profile   \n",
+      "5   bioschemas            Organization        schema:Organization  Profile   \n",
+      "6   bioschemas                  Person              schema:Person  Profile   \n",
+      "7   bioschemas               Phenotype               schema:Thing  Profile   \n",
+      "8   bioschemas        PublicationIssue    schema:PublicationIssue  Profile   \n",
+      "9   bioschemas       PublicationVolume   schema:PublicationVolume  Profile   \n",
+      "10  bioschemas        ScholarlyArticle    schema:ScholarlyArticle  Profile   \n",
+      "11  bioschemas  SemanticTextAnnotation        schema:CreativeWork  Profile   \n",
+      "12  bioschemas        TrainingMaterial    schema:LearningResource  Profile   \n",
+      "13  bioschemas               TaxonName        schema:CreativeWork  Profile   \n",
+      "14  bioschemas                   Study        schema:CreativeWork  Profile   \n",
+      "15  bioschemas           SequenceRange       schema:BioChemEntity  Profile   \n",
+      "16  bioschemas                     RNA       schema:BioChemEntity  Profile   \n",
+      "17  bioschemas      SequenceAnnotation       schema:BioChemEntity  Profile   \n",
+      "\n",
+      "                 version                                                url  \n",
+      "0   0.9-DRAFT-2020_12_08  https://github.com/BioSchemas/specifications/b...  \n",
+      "1   0.8-DRAFT-2020_10_06  https://github.com/BioSchemas/specifications/b...  \n",
+      "2   0.2-DRAFT-2019_06_14  https://github.com/BioSchemas/specifications/b...  \n",
+      "3   0.2-DRAFT-2020_12_03  https://github.com/BioSchemas/specifications/b...  \n",
+      "4   0.6-DRAFT-2020_12_08  https://github.com/BioSchemas/specifications/b...  \n",
+      "5   0.2-DRAFT-2019_07_19  https://github.com/BioSchemas/specifications/b...  \n",
+      "6   0.2-DRAFT-2019_07_19  https://github.com/BioSchemas/specifications/b...  \n",
+      "7              0.2-DRAFT  https://github.com/BioSchemas/specifications/b...  \n",
+      "8   0.2-DRAFT-2020_12_03  https://github.com/BioSchemas/specifications/b...  \n",
+      "9   0.2-DRAFT-2020_12_03  https://github.com/BioSchemas/specifications/b...  \n",
+      "10  0.2-DRAFT-2020_12_03  https://github.com/BioSchemas/specifications/b...  \n",
+      "11  0.2-DRAFT-2020_12_03  https://github.com/BioSchemas/specifications/b...  \n",
+      "12  0.9-DRAFT-2020_12_08  https://github.com/BioSchemas/specifications/b...  \n",
+      "13             0.1-DRAFT  https://github.com/BioSchemas/specifications/b...  \n",
+      "14             0.2-DRAFT  https://github.com/BioSchemas/specifications/b...  \n",
+      "15             0.1-DRAFT  https://github.com/BioSchemas/specifications/b...  \n",
+      "16  0.1-DRAFT-2019_11_15  https://github.com/BioSchemas/specifications/b...  \n",
+      "17             0.7-DRAFT  https://github.com/BioSchemas/specifications/b...  \n",
+      "profile, draft:  draft_profile_list.txt\n",
+      "\n",
+      "type_list.txt\n",
+      "    namespace           name            subclassOf  type      version  \\\n",
+      "0  bioschemas  BioChemEntity  schema:BioChemEntity  Type  0.7-RELEASE   \n",
+      "1  bioschemas      BioSample  schema:BioChemEntity  Type  0.1-RELEASE   \n",
+      "\n",
+      "                                                 url  \n",
+      "0  https://github.com/BioSchemas/specifications/b...  \n",
+      "1  https://github.com/BioSchemas/specifications/b...  \n",
+      "type, release:  type_list.txt\n",
+      "\n",
+      "draft_type_list.txt\n",
+      "    namespace                   name            subclassOf  type  \\\n",
+      "0  bioschemas                    DNA  schema:BioChemEntity  Type   \n",
+      "1  bioschemas                 Enzyme  schema:BioChemEntity  Type   \n",
+      "2  bioschemas       BioChemStructure  schema:BioChemEntity  Type   \n",
+      "3  bioschemas  SequenceMatchingModel   schema:CreativeWork  Type   \n",
+      "\n",
+      "                version                                                url  \n",
+      "0  0.2-DRAFT-2019_06_20  https://github.com/BioSchemas/specifications/b...  \n",
+      "1  0.1-DRAFT-2019_06_20  https://github.com/BioSchemas/specifications/b...  \n",
+      "2  0.1-DRAFT-2019_06_20  https://github.com/BioSchemas/specifications/b...  \n",
+      "3  0.1-DRAFT-2019_06_21  https://github.com/BioSchemas/specifications/b...  \n",
+      "type, draft:  draft_type_list.txt\n",
+      "\n",
+      "deprecated.txt\n",
+      "              namespace        name           subclassOf  type  \\\n",
+      "0  bioschemasdeprecated  DataRecord  schema:CreativeWork  Type   \n",
+      "\n",
+      "                           version  \\\n",
+      "0  0.3-DRAFT-2019_06_20-DEPRECATED   \n",
+      "\n",
+      "                                                 url  \n",
+      "0  https://github.com/BioSchemas/specifications/b...  \n",
+      "deprecated:  deprecated.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### For additional Testing if \"run_update\" fails\n",
+    "\n",
+    "updateall=True\n",
+    "if updateall == True:\n",
+    "    updatedlist = check_for_updates(script_path,True)\n",
+    "else:\n",
+    "    updatedlist = check_for_updates(script_path,False)\n",
+    "if updatedlist == False:\n",
+    "    print(\"no updates pushed\")\n",
+    "else:\n",
+    "    for eachfile in updatedlist:\n",
+    "        print(\"\")\n",
+    "        print(eachfile)\n",
+    "        speclist = read_csv(eachfile,delimiter='\\t',header=0)\n",
+    "        print(speclist)\n",
+    "        tmpinfo = merge_specs(speclist)\n",
+    "        bioschemas_json = remove_NaN_fields(tmpinfo)\n",
+    "        jsonstring = json.dumps(bioschemas_json)\n",
+    "        cleanstring = remove_NaN_fields(jsonstring)\n",
+    "        cleandict = json.loads(cleanstring)\n",
+    "        prettystring = json.dumps(cleandict, indent=2)\n",
+    "        #### Check specification list file name to determine where to save\n",
+    "        if \"deprecated\" in eachfile:\n",
+    "            print(\"deprecated: \", eachfile)\n",
+    "            ####treat as deprecated\n",
+    "            bioschemasfile = os.path.join(script_path,'bioschemasdeprecated.json')\n",
+    "        elif ((\"type\" in eachfile) and (\"draft\" not in eachfile)):\n",
+    "            print(\"type, release: \", eachfile)\n",
+    "            ####treat as type\n",
+    "            bioschemasfile = os.path.join(script_path,'bioschemastypes.json')\n",
+    "        elif ((\"type\" in eachfile) and (\"draft\" in eachfile)):\n",
+    "            print(\"type, draft: \", eachfile)\n",
+    "            #### draft type treat as type \n",
+    "            bioschemasfile = os.path.join(script_path,'bioschemastypesdrafts.json')\n",
+    "        elif ((\"profile\" in eachfile) and (\"draft\" not in eachfile)):\n",
+    "            print(\"profile, release: \", eachfile)\n",
+    "            bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "        elif ((\"profile\" in eachfile) and (\"draft\" in eachfile)):\n",
+    "            ####treat as draft profile\n",
+    "            print(\"profile, draft: \", eachfile)\n",
+    "            bioschemasfile = os.path.join(script_path,'bioschemasdrafts.json')\n",
+    "        with open(bioschemasfile,'w') as outfile:\n",
+    "            outfile.write(prettystring)"
    ]
   },
   {
