add dateModified info into context

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -198,6 +198,7 @@
     "    return(cleantext)\n",
     "\n",
     "def check_context_url(spec_json):\n",
+    "    now = datetime.now()\n",
     "    contextInfo = spec_json['@context']\n",
     "    contextInfo[\"bioschemas\"] = \"https://discovery.biothings.io/view/bioschemas/\"\n",
     "    contextInfo[\"bioschemasdrafts\"] = \"https://discovery.biothings.io/view/bioschemasdrafts/\"\n",
@@ -206,6 +207,7 @@
     "    contextInfo[\"bioschemasdeprecated\"] = \"https://discovery.biothings.io/view/bioschemasdeprecated/\"\n",
     "    contextInfo[\"dct\"] = \"http://purl.org/dc/terms/\"\n",
     "    contextInfo[\"owl\"] = \"http://www.w3.org/2002/07/owl#\"\n",
+    "    contextInfo[\"schema:dateModified\"] = now.strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
     "    return(contextInfo)\n",
     "\n",
     "def update_subclass(spec_list,eachurl,cleantext):\n",
