include schema validation, additional metadata in tables

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -41,13 +41,15 @@
    "source": [
     "### To do\n",
     "1. Include a check for properties which already have a list for the domainIncludes\n",
+    "2. Ensure script works even with extra data in table\n",
+    "3. Add schema validation check before allowing it to commit\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,14 +509,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False ['draft_profile_list.txt']\n"
+      "False ['profile_list.txt']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemas', 'dct']\n",
+      "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n"
      ]
     }
    ],
@@ -527,6 +537,7 @@
     "import pathlib\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
+    "from biothings_schema import Schema\n",
     "from src.common import *\n",
     "\n",
     "#### Main\n",
@@ -674,20 +685,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from biothings_schema import Schema\n",
     "\n",
     "script_path = ''\n",
-    "url = \"https://raw.githubusercontent.com/gtsueng/DDE_bioschemas/main/draft_validations/ProteinStructure_v0.5-DRAFT-2018_08_15.json\"\n",
-    "#bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
-    "#with open(bioschemasfile,'r') as infile:\n",
-    "#    url = json.load(infile)\n",
+    "#url = \"https://raw.githubusercontent.com/gtsueng/DDE_bioschemas/main/draft_validations/ProteinStructure_v0.5-DRAFT-2018_08_15.json\"\n",
+    "bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "with open(bioschemasfile,'r') as infile:\n",
+    "    url = json.load(infile)\n",
     "\n",
     "sc = Schema(url, base_schema=[\"schema.org\"])\n",
-    "#sc.validation"
+    "\n"
    ]
   },
   {
