clean up notebook

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -61,6 +61,7 @@
     "import pathlib\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
+    "from biothings_schema import Schema\n",
     "from src.common import *"
    ]
   },
@@ -135,6 +136,7 @@
     "                    bioschemasfile = os.path.join(script_path,'bioschemasdrafts.json')\n",
     "                else:\n",
     "                    bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "            sc = Schema(cleandict, base_schema=[\"schema.org\"])\n",
     "            with open(bioschemasfile,'w') as outfile:\n",
     "                outfile.write(prettystring)\n",
     "        "
