add schema validation step before saving

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -699,7 +699,9 @@
     "with open(bioschemasfile,'r') as infile:\n",
     "    url = json.load(infile)\n",
     "\n",
-    "sc = Schema(url, base_schema=[\"schema.org\"])\n",
+    "sc = Schema(url, base_schema=[\"schema.org\",\"bioschemastypes\",\"bioschemas\",\n",
+    "                              \"bioschemasdrafts\",\"bioschemastypesdrafts\",\n",
+    "                              \"bioschemasdeprecated\"])\n",
     "\n"
    ]
   },
