fix capitalization in table

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -217,7 +217,7 @@
     "def update_subclass(spec_list,eachurl,cleantext):\n",
     "    spec_json = json.loads(cleantext)\n",
     "    tmpinfo = spec_list.loc[spec_list['url']==eachurl]\n",
-    "    tmpsubclass = tmpinfo.iloc[0]['subclassOf']\n",
+    "    tmpsubclass = tmpinfo.iloc[0]['subClassOf']\n",
     "    classname = tmpinfo.iloc[0]['name']\n",
     "    truesubclass = {\"@id\": tmpsubclass}\n",
     "    for x in spec_json['@graph']:\n",
