--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -7,12 +7,19 @@
    "source": [
     "## Specification DDE Metadata generator\n",
     "\n",
-    "This script ingests information from Sahar's automatically pushed list of recently updated files to create changes in the appropriate tables that are used by the DDE."
+    "This script ingests information from Sahar's automatically pushed list of recently updated files to create changes in the appropriate tables that are used by the DDE.\n",
+    "\n",
+    "Specifically, this script will:\n",
+    "1. Generate a table from all the files that were updated and pushed to the Bioschemas-DDE repo as a result of Sahar's automation\n",
+    "2. split the table to the individual files that they should update\n",
+    "3. Check to see if the url is already in the table, if so, ignore it\n",
+    "4. Of the remaining entries, check if the name is already in the table\n",
+    " * if it is, select the version with the higher number and update the table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "b4a8ccc1",
    "metadata": {},
    "outputs": [],
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -77,16 +84,9 @@
     "        tmpdict = parse_info_from_json(url,parent_source_options)\n",
     "        updated_list.append(tmpdict)\n",
     "    updated_df = pd.DataFrame(updated_list)\n",
-    "    return updated_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "id": "f75bf57c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return updated_df\n",
+    "\n",
+    "\n",
     "def parse_version_from_url(url,classname):\n",
     "    urlstrlist = url.split('/')\n",
     "    bioschemasfile = urlstrlist[-1]\n",
@@ -139,166 +139,62 @@
     "    return latest_version\n",
     "\n",
     "\n",
-    "def update_spec_table(original_df,spec_updated_df):\n",
-    "    classes_to_update = spec_updated_df['name'].to_list()\n",
-    "    newdf = original_df.loc[~original_df['name'].isin(classes_to_update)]\n",
-    "    for eachclass in classes_to_update:\n",
-    "        updateversiondf = spec_updated_df.loc[spec_updated_df['name']==eachclass]\n",
-    "        updateversion = updateversiondf.iloc[0]['version']\n",
-    "        oldversiondf = original_df.loc[original_df['name']==eachclass]\n",
-    "        oldversion = oldversiondf.iloc[0]['version']\n",
-    "        latestversion = compare_versions(updateversion,oldversion)\n",
-    "        if latestversion == updateversion:\n",
-    "            newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
-    "        else :\n",
-    "            newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
-    "    return newdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26bb006a",
-   "metadata": {},
-   "source": [
-    "## To do:\n",
+    "def update_spec_table(eachfile,spec_updated_df):\n",
+    "    original_df = pd.read_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0)\n",
+    "    update_needed = check_for_updates(spec_updated_df,original_df)\n",
+    "    if update_needed == True:\n",
+    "        classes_to_update = spec_updated_df['name'].to_list()\n",
+    "        newdf = original_df.loc[~original_df['name'].isin(classes_to_update)]\n",
+    "        for eachclass in classes_to_update:\n",
+    "            updateversiondf = spec_updated_df.loc[spec_updated_df['name']==eachclass]\n",
+    "            updateversion = updateversiondf.iloc[0]['version']\n",
+    "            oldversiondf = original_df.loc[original_df['name']==eachclass]\n",
+    "            oldversion = oldversiondf.iloc[0]['version']\n",
+    "            latestversion = compare_versions(updateversion,oldversion)\n",
+    "            if latestversion == updateversion:\n",
+    "                newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
+    "            else :\n",
+    "                newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
+    "        newdf.to_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0,index=False)\n",
     "\n",
-    "1. Generate the updated_df\n",
-    "2. split out the updated_df to the individual tables that they should update\n",
-    "3. Check to see if the url is already in the table, if so, ignore it\n",
-    " * get old table url.tolist generate a list of urls)\n",
-    " * `newtable.loc[~newtable[url].isin(list of oldtable urls)]`\n",
-    "4. of the remaining entries, check if the name is already in the table\n",
-    " * if it is, select the version with the higher number\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "9345d242",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              namespace    name          subClassOf     type  \\\n",
-      "0  bioschemasdeprecated  Beacon  schema:DataCatalog  Profile   \n",
-      "\n",
-      "                           version  \\\n",
-      "0  0.2-DRAFT-2018_04_23-DEPRECATED   \n",
-      "\n",
-      "                                                 url  \n",
-      "0  https://github.com/BioSchemas/specifications/t...  \n"
-     ]
-    }
-   ],
-   "source": [
-    "script_path = ''\n",
-    "updated_df = generate_base_update_table(script_path)\n",
     "\n",
-    "## split the tables\n",
-    "deprecated = updated_df.loc[updated_df['version'].astype(str).str.contains('DEPRECATED')]\n",
-    "draftdf = updated_df.loc[updated_df['version'].astype(str).str.contains('DRAFT')]\n",
-    "releasedf = updated_df.loc[updated_df['version'].astype(str).str.contains('RELEASE')]\n",
-    "draft_profile = draftdf.loc[draftdf['type']=='Profile']\n",
-    "draft_type = draftdf.loc[draftdf['type']=='Type']\n",
-    "\n",
-    "print(deprecated)"
+    "def update_tables(script_path):\n",
+    "    updated_df = generate_base_update_table(script_path)\n",
+    "    deprecated = updated_df.loc[updated_df['version'].astype(str).str.contains('DEPRECATED')]\n",
+    "    draftdf = updated_df.loc[updated_df['version'].astype(str).str.contains('DRAFT')]\n",
+    "    releasedf = updated_df.loc[updated_df['version'].astype(str).str.contains('RELEASE')]\n",
+    "    draft_profile = draftdf.loc[draftdf['type']=='Profile']\n",
+    "    draft_type = draftdf.loc[draftdf['type']=='Type']\n",
+    "    released_profile = releasedf.loc[releasedf['type']=='Profile']\n",
+    "    released_type = releasedf.loc[releasedf['type']=='Type']\n",
+    "    filelist = ['deprecated.txt','profile_list.txt','type_list.txt','draft_profile_list.txt','draft_type_list.txt']\n",
+    "    for eachfile in filelist:\n",
+    "        if 'deprecated' in eachfile:\n",
+    "            spec_updated_df = deprecated\n",
+    "            update_spec_table(eachfile,spec_updated_df)\n",
+    "        elif 'profile' in eachfile:\n",
+    "            if 'draft' in eachfile:\n",
+    "                spec_updated_df = draft_profile\n",
+    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "            else:\n",
+    "                spec_updated_df = released_profile\n",
+    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "        else:\n",
+    "            if 'draft' in eachfile:\n",
+    "                spec_updated_df = draft_type\n",
+    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "            else:\n",
+    "                spec_updated_df = released_type\n",
+    "                update_spec_table(eachfile,spec_updated_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "a89230cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                name            subclassOf     type  \\\n",
-      "0         DataRecord   schema:CreativeWork  Profile   \n",
-      "1  ProteinAnnotation  schema:BioChemEntity  Profile   \n",
-      "2             Beacon                   NaN  Profile   \n",
-      "\n",
-      "                           version  \\\n",
-      "0             0.2-DRAFT-2019_06_14   \n",
-      "1                        0.6-DRAFT   \n",
-      "2  0.2-DRAFT-2018_04_23-DEPRECATED   \n",
-      "\n",
-      "                                                 url             namespace  \\\n",
-      "0  https://github.com/BioSchemas/specifications/b...                   NaN   \n",
-      "1  https://github.com/BioSchemas/specifications/b...                   NaN   \n",
-      "2  https://github.com/BioSchemas/specifications/t...  bioschemasdeprecated   \n",
-      "\n",
-      "           subClassOf  \n",
-      "0                 NaN  \n",
-      "1                 NaN  \n",
-      "2  schema:DataCatalog  \n"
-     ]
-    }
-   ],
-   "source": [
-    "## check if a table needs updating\n",
-    "\n",
-    "spec_updated_df = deprecated\n",
-    "original_df = pd.read_csv(os.path.join(script_path,'deprecated.txt'),delimiter='\\t',header=0,index_col=0)\n",
-    "update_needed = check_for_updates(spec_updated_df,original_df)\n",
-    "newdf = update_spec_table(original_df,spec_updated_df)\n",
-    "print(newdf)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "714714ae",
+   "execution_count": 4,
+   "id": "f75bf57c",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "459bcc09",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.10-DRAFT\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = '0.10-DRAFT'\n",
-    "b = '0.8-DRAFT'\n",
-    "  \n",
-    "test = compare_versions(a,b)\n",
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "00f5a30d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "older is smaller\n"
-     ]
-    }
-   ],
-   "source": [
-    "## if a table needs updating, select the files from the updatedf only if the version is greater\n",
-    "update_needed = True\n",
-    "if update_needed == True:\n",
-    "\n"
-   ]
   },
   {
    "cell_type": "code",
