update include dateModified for schema itself as '@dateModified'

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +213,11 @@
     "def check_context_url(allcontext,spec_json,tmpnamespace):\n",
     "    now = datetime.now()\n",
     "    contextInfo = spec_json['@context']\n",
-    "    allcontext[\"schema:dateModified\"] = now.strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
     "    for key in list(contextInfo.keys()):\n",
     "        if key != tmpnamespace: \n",
     "            if key not in list(allcontext.keys()):\n",
     "                allcontext[key] = contextInfo[key]\n",
+    "    allcontext[\"@dateModified\"] = now.strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
     "    return allcontext\n",
     "\n",
     "def update_subclass(spec_list,eachurl,cleantext):\n",
@@ -535,13 +535,13 @@
      "text": [
       "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dwc', 'bioschemas', 'dct']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dwc', 'ppeo', 'bioschemasdrafts', 'rdf', 'dct']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['rdf', 'dwc', 'dct', 'bioschemasdrafts', 'ppeo']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
       "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'bioschemastypes']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'bioschemastypesdrafts']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemastypesdrafts', 'dct']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'bioschemasdrafts', 'rdf']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemasdrafts', 'dct', 'rdf']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n"
      ]
     }
