fix issue in logic if profile not in previous table

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b4a8ccc1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "    for eachfile in latest_updates:\n",
     "        filepath = os.path.join(updated_specs_folder,eachfile)\n",
     "        tmpdf = pd.read_csv(filepath, header=0)\n",
-    "        version = tmpdf.iloc[0]['typeversion']\n",
+    "        version = tmpdf.iloc[0]['version']\n",
     "        url = tmpdf.iloc[0]['url']\n",
     "        tmpdict = parse_info_from_json(url,parent_source_options)\n",
     "        updated_list.append(tmpdict)\n",
@@ -149,13 +149,16 @@
     "            updateversiondf = spec_updated_df.loc[spec_updated_df['name']==eachclass]\n",
     "            updateversion = updateversiondf.iloc[0]['version']\n",
     "            oldversiondf = original_df.loc[original_df['name']==eachclass]\n",
-    "            oldversion = oldversiondf.iloc[0]['version']\n",
-    "            latestversion = compare_versions(updateversion,oldversion)\n",
-    "            if latestversion == updateversion:\n",
-    "                newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
-    "            else :\n",
-    "                newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
-    "        newdf.to_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0,index=False)\n",
+    "            if len(oldversiondf)<=0:\n",
+    "                latestversion = updateversion\n",
+    "            else:\n",
+    "                oldversion = oldversiondf.iloc[0]['version']\n",
+    "                latestversion = compare_versions(updateversion,oldversion)\n",
+    "                if latestversion == updateversion:\n",
+    "                    newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
+    "                else :\n",
+    "                    newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
+    "        newdf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=0,index=False)\n",
     "\n",
     "\n",
     "def update_tables(script_path):\n",
@@ -190,11 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f75bf57c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "script_path = ''\n",
+    "update_tables(script_path)"
+   ]
   },
   {
    "cell_type": "code",
@@ -221,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
