address ingest issues with date/time columns

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b4a8ccc1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,8 @@
     "\n",
     "\n",
     "def update_spec_table(eachfile,spec_updated_df):\n",
-    "    original_df = pd.read_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0)\n",
+    "    original_df = pd.read_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0,\n",
+    "                              usecols=['name','subClassOf','version','url'])\n",
     "    update_needed = check_for_updates(spec_updated_df,original_df)\n",
     "    if update_needed == True:\n",
     "        classes_to_update = spec_updated_df['name'].to_list()\n",
@@ -158,7 +159,7 @@
     "                    newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
     "                else :\n",
     "                    newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
-    "        newdf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=0,index=False)\n",
+    "        newdf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=True,index=False)\n",
     "\n",
     "\n",
     "def update_tables(script_path):\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "f75bf57c",
    "metadata": {
     "scrolled": true
