fix ordering of columns before export

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -159,6 +159,7 @@
     "                    newdf = pd.concat((newdf,updateversiondf),ignore_index=True)\n",
     "                else :\n",
     "                    newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
+    "        ordereddf = newdf[['namespace','name','subClassOf','type','version','url']].copy()\n",
     "        newdf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=True,index=False)\n",
     "\n",
     "\n",
