--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
     "                else :\n",
     "                    newdf = pd.concat((newdf,oldversiondf),ignore_index=True)\n",
     "        ordereddf = newdf[['namespace','name','subClassOf','type','version','url']].copy()\n",
-    "        newdf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=True,index=False)\n",
+    "        ordereddf.to_csv(os.path.join(script_path,eachfile),sep='\\t',header=True,index=False)\n",
     "\n",
     "\n",
     "def update_tables(script_path):\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f75bf57c",
    "metadata": {
     "scrolled": true
